alguns elementos adicionados

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="styles/style.css" rel="stylesheet" >
+    <title>IASD Porto Batista</title>
 </head>
 <body>
-    
+    <div inicio>
+    <h1>Igreja Adventista do Setimo Dia</h1>
+    <h2>Porto Batista - Triunfo, RS</h2>
+    </div>
+    <address>
+      by Vanderson Vargas
+    </address>
 </body>
 </html>
